--- a/sections/instafeed.liquid
+++ b/sections/instafeed.liquid
@@ -1,5 +1,5 @@
 {% if section.settings.header_enable %}
-  <div class="container full instafeed-header text-center">
+  <div class="container instafeed-header text-center">
     <div class="row">
       {% if section.settings.header_icon_enable %}
         {% include 'icon' with 'instagram' %}
@@ -8,7 +8,7 @@
     </div>
   </div>
 {% endif %}
-<div class="container">
+<div class="container l">
   <div class="row" id="instafeed"></div>
 </div>
 
