--- a/sections/password-content.liquid
+++ b/sections/password-content.liquid
@@ -5,7 +5,7 @@
 {% endcomment %}
 
 <main id="MainContent" role="main">
-  <div class="container center">
+  <div class="container l center">
 
     <div class="password-heading">
       <h2>{{ section.settings.header }}</h2>
