--- a/snippets/theme-breadcrumbs.liquid
+++ b/snippets/theme-breadcrumbs.liquid
@@ -1,7 +1,7 @@
 <!-- /snippets/theme-breadcrumbs.liquid -->
 
 {% unless template == 'index' or template == 'cart' %}
-  <div class="container">
+  <div class="container l">
     <nav class="breadcrumb" role="navigation" aria-label="breadcrumbs">
       <a href="/" title="{{ 'home_page.title' | t }}">{{ 'home_page.title' | t }}</a>
       {% if template contains 'product' %}
