--- a/snippets/theme-footer.liquid
+++ b/snippets/theme-footer.liquid
@@ -2,7 +2,7 @@
 
 <footer class="theme-footer center" role="contentinfo">
 
-  <div class="container full">
+  <div class="container">
     <hr>
     <div class="row">
       <div class="column l5 m12 s12 l-left middle">
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <div class="container full center">
+  <div class="container center">
     <div class="row">
       <div class="column l7 m12 s12 l-left middle">
         {% if settings.enable_gateway_icons %}
