--- a/snippets/theme-header.liquid
+++ b/snippets/theme-header.liquid
@@ -1,7 +1,7 @@
 <!-- /snippets/theme-header.liquid -->
 
 <header class="theme-header" role="banner">
-  <div class="container full">
+  <div class="container">
 
     <div class="row l-table m-table">
       <div class="column l8 m8 s12 l-left m-left s-middle">
