--- a/templates/collection.endless-scroll.liquid
+++ b/templates/collection.endless-scroll.liquid
@@ -4,7 +4,7 @@
 
 {% assign column_width = 'column l6 m6 s12' %}
 
-<div class="container">
+<div class="container l">
   <header>
     <div class="row">
       <div class="column l6 m12 s12">
@@ -39,7 +39,7 @@
   </p>
 </div>
 
-<div class="container">
+<div class="container l">
   <div class="row" id="EndlessScroll">
     {% for product in collection.products %}
       {% include 'collection-product' %}
