--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/customers/login.liquid -->
 
-<div class="container center">
+<div class="container l center">
 
   <div id="LoginForm">
     {% form 'customer_login' %}
