--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/customers/register.liquid -->
 
-<div class="container">
+<div class="container l">
 
   <div id="RegisterForm" class="center">
 
