--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/page.contact.liquid -->
 
-<div class="container">
+<div class="container l">
   <div class="row">
     <div class="column l6 m12 s12">
 
