--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -14,7 +14,7 @@
 
 {% paginate search.results by 10 %}
 
-<div class="container">
+<div class="container l">
 
   {% if search.performed %}
     {% if search.results_count == 0 %}
