--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -5,7 +5,7 @@
   {% assign number_of_comments = article.comments_count | plus: 1 %}
 {% endif %}
 
-<div class="container">
+<div class="container l">
   <div class="row">
 
     <article class="column l8 m12 s12" itemscope itemtype="http://schema.org/Article">
