--- a/templates/blog.grid.liquid
+++ b/templates/blog.grid.liquid
@@ -2,7 +2,7 @@
 
 {% paginate blog.articles by 9 %}
 
-  <div class="container">
+  <div class="container l">
     {% if current_tags %}
       <h1>{{ blog.title | link_to: blog.url }} &mdash; {{ current_tags.first }}</h1>
     {% else %}
@@ -10,7 +10,7 @@
     {% endif %}
   </div>
 
-  <div class="container">
+  <div class="container l">
     <div class="row">
 
       {% for article in blog.articles %}
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container l">
     {% if paginate.pages > 1 %}
       <hr>
       <div class="pagination">
