--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -2,7 +2,7 @@
 
 {% paginate blog.articles by 4 %}
 
-  <div class="container">
+  <div class="container l">
     <div class="row">
 
       <div class="column l8 m12 s12">
