--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/customers/activate_account.liquid -->
 
-<div class="container">
+<div class="container l">
 
   <h1>{{ 'customer.activate_account.title' | t }}</h1>
   <p>{{ 'customer.activate_account.subtext' | t }}</p>
