--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -182,7 +182,7 @@
 </div>
 
 {% if paginate.pages > 1 %}
-  <div class="container">
+  <div class="container l">
     <div class="pagination">
       {{ paginate | default_pagination }}
     </div>
