--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,6 +1,6 @@
 <!-- /templates/customers/reset_password.liquid -->
 
-<div class="container center">
+<div class="container l center">
 
   <div id="PasswordResetForm">
     {% form 'reset_customer_password' %}
