--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -34,7 +34,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="container l">
 
     <header class="theme-header center" role="banner">
       <div class="h1 logo" itemscope itemtype="http://schema.org/Organization">
