--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -60,7 +60,7 @@
         {% if paginate.pages > 1 %}
           <hr>
           <div class="pagination">
-            {{ paginate | default_pagination }}
+            {{ paginate | default_pagination | replace: '&laquo; Previous', '&larr;' | replace: 'Next &raquo;', '&rarr;' }}
           </div>
         {% endif %}
 
