--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -3,7 +3,7 @@
 {% assign pagination = 6 %}
 {% paginate customer.addresses by pagination %}
 
-<header class="container">
+<header class="container l">
   <div class="row l-table m-table">
     <div class="column l6 m6 s12">
       {% for address in customer.addresses | limit:1 %}
@@ -17,7 +17,7 @@
   <hr>
 </header>
 
-<div class="container">
+<div class="container l">
   <div class="row">
 
     <div class="column l8 m12">
