--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -69,7 +69,7 @@
 
   {% include 'popup-cart' %}
   {% include 'popup-error' %}
-  {% include 'popup-login' %}
+  {% include 'popup-account' %}
   {{ 'rivets.min.js' | asset_url | script_tag }}
   {{ 'cart.js' | asset_url | script_tag }}
   {{ 'app.js' | asset_url | script_tag }}
