--- a/snippets/popup-account.liquid
+++ b/snippets/popup-account.liquid
@@ -1,13 +1,42 @@
 <!-- /snippets/popup-account.liquid -->
 
-<h3>{{ 'account.account' | t }}</h3>
+<div id="PopupAccount" class="popup">
+  <div class="popup-inner">
+    <div class="popup-outside"></div>
+    <div class="popup-content left" data-cart-view rv-cloak>
 
-{% if customer %}
-  {% if customer.first_name != blank %}
-    {{ customer.first_name }}
-  {% endif %}
-  | {{ 'layout.customer.log_out' | t | customer_logout_link }}
-{% else %}
-  {{ 'layout.customer.log_in' | t | customer_login_link }}
-  | {{ 'layout.customer.create_account' | t | customer_register_link }}
-{% endif %}
+      {% if customer %}
+
+        <div class="h4 left">{{ 'account.title' | t }}</div>
+        {% include 'account-sidebar' %}
+
+      {% else %}
+
+        <div class="h4 left">{{ 'account.login' | t }}</div>
+
+        <div id="LoginForm">
+          {% form 'customer_login' %}
+
+            <p>{{ 'account.no_account' | t }} {{ 'account.create_account' | t | customer_register_link }}</p>
+
+            {{ form.errors | default_errors }}
+
+            <label for="CustomerEmail" class="clearfix">{{ 'form.email' | t }}</label>
+            <input type="email" name="customer[email]" id="CustomerEmail" {% if form.errors contains 'email' %}class="error"{% endif %} placeholder="{{ 'form.email' | t }}" autocorrect="off" autocapitalize="off" autofocus>
+
+            {% if form.password_needed %}
+              <label for="CustomerPassword" class="clearfix">{{ 'account.password' | t }}</label>
+              <input type="password" value="" name="customer[password]" id="CustomerPassword" {% if form.errors contains 'password' %}class="error"{% endif %} placeholder="{{ 'account.password' | t }}">
+            {% endif %}
+
+            <input type="submit" class="wide" value="{{ 'account.sign_in' | t }}">
+
+          {% endform %}
+        </div>
+
+      {% endif %}
+
+      <a href="#close" class="popup-close" aria-label="{{ 'common.close' | t }}">{{ 'common.close' | t }}</a>
+    </div>
+  </div>
+</div>
