--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -1,4 +1,4 @@
-<!-- snippets/index-featured-collections.liquid -->
+<!-- sections/collections.liquid -->
 
 {% if section.settings.title != blank %}
   <div class="container l">
