--- a/snippets/popup-account.liquid
+++ b/snippets/popup-account.liquid
@@ -3,7 +3,7 @@
 <div id="PopupAccount" class="popup">
   <div class="popup-inner">
     <div class="popup-outside"></div>
-    <div class="popup-content left" data-cart-view rv-cloak>
+    <div class="popup-content left">
 
       {% if customer %}
 
