--- a/sections/instafeed.liquid
+++ b/sections/instafeed.liquid
@@ -1,3 +1,5 @@
+<!-- sections/instafeed.liquid -->
+
 {% if section.settings.header_enable %}
   <div class="container instafeed-header text-center">
     <div class="row">
