--- a/sections/password-footer.liquid
+++ b/sections/password-footer.liquid
@@ -16,7 +16,7 @@
     <small><a href="" data-popup="#PasswordPagePopup" class="popup-link">{{ 'password_page.password_link' | t }}</a></small>
   </p>
 
-  <div class="popup" role="alert" id="PasswordPagePopup">
+  <div class="popup overlay" role="alert" id="PasswordPagePopup">
     <div class="popup-inner">
       <div class="popup-outside"></div>
       <div class="popup-content">
