--- a/snippets/popup-cart.liquid
+++ b/snippets/popup-cart.liquid
@@ -5,7 +5,7 @@
   cart contents on any page
 {% endcomment %}
 
-<div id="PopupCart" class="popup">
+<div id="PopupCart" class="popup overlay">
   <div class="popup-inner">
     <div class="popup-outside"></div>
     <div class="popup-content left" data-cart-view rv-cloak>
