--- a/snippets/popup-error.liquid
+++ b/snippets/popup-error.liquid
@@ -4,7 +4,7 @@
   For dispaying cart errors when necessary
 {% endcomment %}
 
-<div id="PopupError" class="popup">
+<div id="PopupError" class="popup overlay">
   <div class="popup-inner">
     <div class="popup-outside"></div>
     <div class="popup-content left">
