--- a/snippets/popup-account.liquid
+++ b/snippets/popup-account.liquid
@@ -1,6 +1,6 @@
 <!-- /snippets/popup-account.liquid -->
 
-<div id="PopupAccount" class="popup">
+<div id="PopupAccount" class="popup overlay">
   <div class="popup-inner">
     <div class="popup-outside"></div>
     <div class="popup-content left">
