--- a/snippets/popup-demo.liquid
+++ b/snippets/popup-demo.liquid
@@ -1,6 +1,6 @@
 <!-- /snippets/demo-popup.liquid -->
 
-<div class="popup" role="alert" id="demo-popup">
+<div class="popup overlay" role="alert" id="demo-popup">
   <div class="popup-inner">
     <div class="popup-outside"></div>
     <div class="popup-content">
