--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,7 +7,7 @@
  \___/|__/| \_/|__/\__/  /\_/
                |\
                |/
-  Concrete v0.1
+  Concrete v0.2
   https://elkfox.com
   https://experts.shopify.com/elkfox
   Copyright 2015 Shopify Inc. & Elkfox Co Pty Ltd
@@ -22,7 +22,6 @@
   <meta name="viewport"
         content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta name="theme-color" content="{{ settings.color_primary }}">
-
   <title>
     {{ page_title }}
     {% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %}&ndash; {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}
@@ -68,6 +67,8 @@
   {% include 'popup-cart' %}
   {% include 'popup-error' %}
   {% include 'popup-account' %}
+
+  {{ 'option_selection.js' | shopify_asset_url | script_tag }}
   {{ 'rivets.min.js' | asset_url | script_tag }}
   {{ 'cart.js' | asset_url | script_tag }}
   {{ 'app.js' | asset_url | script_tag }}
