--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -8,7 +8,7 @@
 
     <div class="container l">
       <p class="h1 section-header__left">{{ collection_title }}</p>
-      <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: collection_title }}">More {{ collection_title }} &rsaquo;</a>
+      <a href="{{ collection.url }}" title="{{ 'collection.title }}">More {{ collection_title }} &rsaquo;</a>
     </div>
 
     <div class="container l">
