--- a/templates/collection.list.liquid
+++ b/templates/collection.list.liquid
@@ -94,7 +94,7 @@
           </div>
 
           {% else %}
-            <p>{{ 'collections.general.no_matches' | t }}</p>
+            <p>{{ 'collection.no_matches' | t }}</p>
           {% endfor %}
 
         </div>
