--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -53,7 +53,7 @@
 
       <input type="submit" value="{{ 'form.send' | t }}">
 
-      <p><a href="#" id="HideRecoverPasswordLink">{{ 'form.cancel' | t }}</a></p>
+      <p><a href="#" rel="nofollow" id="HideRecoverPasswordLink">{{ 'form.cancel' | t }}</a></p>
 
     {% endform %}
 
