--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -100,7 +100,7 @@
         <hr>
 
         <a href="{{ shop.url }}" class="button" target="_blank">{{ 'gift_cards.shop_link' | t }}</a>
-        <a href="#" class="button" onclick="window.print();">{{ 'gift_cards.print' | t }}</a>
+        <a href="#" rel="nofollow" class="button" onclick="window.print();">{{ 'gift_cards.print' | t }}</a>
 
       </div>
     </main>
