--- a/snippets/onboarding-featured-collections.liquid
+++ b/snippets/onboarding-featured-collections.liquid
@@ -15,12 +15,12 @@
     <div class="row">
       {% for i in (1..6) %}
         <div class="column l4 m6 s12">
-          <a href="#" class="grid__image">
+          <a href="#" rel="nofollow" class="grid__image">
             {% capture imageUrl %}//cdn.shopify.com/s/images/themes/product-{{ i }}.png{% endcapture %}
             {{ imageUrl | img_tag }}
           </a>
           <p>
-            <a href="#">{{ 'onboarding.collections.collection_title' | t }}</a><br>
+            <a href="#" rel="nofollow">{{ 'onboarding.collections.collection_title' | t }}</a><br>
             {{ 'onboarding.collections.items_with_count' | t: count: i }}
           </p>
         </div>
