--- a/snippets/blog-author.liquid
+++ b/snippets/blog-author.liquid
@@ -1,6 +1,6 @@
 <!-- /snippets/blog-author.liquid -->
 
-{% if article.user.account_owner %}
+{% if article.user.bio != '' %}
   <hr>
   <div class="row">
     <div class="column l3 m3 s-hide">
