--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -19,7 +19,7 @@
 
           {% if form.posted_successfully? %}
             <p class="note form-success">
-              {{ 'contact.form.post_success' | t }}
+              {{ 'form.contact.success' | t }}
             </p>
           {% endif %}
 
