--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,8 +24,8 @@
   <meta name="theme-color" content="{{ settings.color_primary }}">
   <title>
     {{ page_title }}
-    {% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %}&ndash; {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}
-    {% if current_page != 1 %}&ndash; {{ 'general.meta.page' | t: page: current_page }}{% endif %}
+    {% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %}&ndash; {{ 'common.meta.tags' | t: tags: meta_tags }}{% endif %}
+    {% if current_page != 1 %}&ndash; {{ 'common.meta.page' | t: page: current_page }}{% endif %}
     {% unless page_title contains shop.name %}&ndash; {{ shop.name }}{% endunless %}
   </title>
   {% if page_description %}
