--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -2,8 +2,7 @@
 
 <div class="container l">
 
-  <h1>{{ 'customer.activate_account.title' | t }}</h1>
-  <p>{{ 'customer.activate_account.subtext' | t }}</p>
+  <h1>{{ 'account.activate.title' | t }}</h1>
 
   {% comment %}
     This form must use 'activate_customer_password'
@@ -12,14 +11,14 @@
 
     {{ form.errors | default_errors }}
 
-    <label for="CustomerPassword">{{ 'customer.activate_account.password' | t }}</label>
-    <input type="password" value="" name="customer[password]" id="CustomerPassword" placeholder="{{ 'customer.activate_account.password' | t }}">
+    <label for="CustomerPassword">{{ 'account.password' | t }}</label>
+    <input type="password" value="" name="customer[password]" id="CustomerPassword" placeholder="{{ 'account.password' | t }}">
 
-    <label for="CustomerPasswordConfirmation">{{ 'customer.activate_account.password_confirm' | t }}</label>
-    <input type="password" value="" name="customer[password_confirmation]" id="CustomerPasswordConfirmation" placeholder="{{ 'customer.activate_account.password_confirm' | t }}">
+    <label for="CustomerPasswordConfirmation">{{ 'account.password_confirmation' | t }}</label>
+    <input type="password" value="" name="customer[password_confirmation]" id="CustomerPasswordConfirmation" placeholder="{{ 'account.password_confirmation' | t }}">
 
-    <input type="submit" value="{{ 'customer.activate_account.submit' | t }}">
-    <input type="submit" name="decline" value="{{ 'customer.activate_account.cancel' | t }}">
+    <input type="submit" value="{{ 'form.submit' | t }}">
+    <input type="submit" name="decline" value="{{ 'form.cancel' | t }}">
   {% endform %}
 
 </div>
