--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -7,10 +7,12 @@
  \___/|__/| \_/|__/\__/  /\_/
                |\
                |/
-  Concrete v0.1
-  https://elkfox.com
-  https://experts.shopify.com/elkfox
-  Copyright 2015 Shopify Inc. & Elkfox Co Pty Ltd
+Concrete v0.2
+https://github.com/Elkfox/Concrete
+Copyright (c) 2017 Elkfox Co Pty Ltd
+https://elkfox.com
+Project lead: Cam Gould
+MIT License
 ============================================================================ -->
 <!--[if IE 9]> <html class="ie9 no-js" lang="{{ shop.locale }}"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="{{ shop.locale }}"> <!--<![endif]-->
