Minor styling changes

--- a/assets/app.scss.liquid
+++ b/assets/app.scss.liquid
@@ -278,6 +278,9 @@ p {
   font-weight: $fontRegular;
   line-height: $lineHeight;
   margin-bottom: 1.4rem;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 a {
