--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -2,7 +2,7 @@
 
 <div class="container l">
   <div class="row">
-    <div class="column l6 m12 s12">
+    <div class="column l6 m12 s12 center">
 
       <h1>{{ page.title }}</h1>
 
